--- a/index.html
+++ b/index.html
@@ -3,15 +3,30 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./style.css" />
-  <title>Vite App</title>
+  <title>About Boluwatife Johnson | Frontend developer, and Technical speaker</title>
+  <meta name="description"
+    content="Building products, pushing the browser to the limit and learning exciting technologies are 3 terms that describe my journey into tech. As a Computer Science graduate, I thrive to make softwares that are built for the web, user enjoyable and scalable to extend how humans use computers. I believe there's no limit to how the browser can go, we haven't just pushed it there yet. Aside coding, I also love to build businesses as I am doing on the side with orunla.ng." />
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="About Boluwatife Johnson | Frontend developer, and Technical speaker">
+  <meta property="og:description"
+    content="Building products, pushing the browser to the limit and learning exciting technologies are 3 terms that describe my journey into tech. As a Computer Science graduate, I thrive to make softwares that are built for the web, user enjoyable and scalable to extend how humans use computers.">
+  <meta property="og:image" content="https://booluw.vercel.app/Booluw.jpg">
+  <meta property="og:url" content="https://booluw.vercel.app">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="About Boluwatife Johnson | Frontend developer, and Technical speaker">
+  <meta name="twitter:description"
+    content="Building products, pushing the browser to the limit and learning exciting technologies are 3 terms that describe my journey into tech. As a Computer Science graduate, I thrive to make softwares that are built for the web, user enjoyable and scalable to extend how humans use computers.">
+  <meta name="twitter:image" content="https://booluw.vercel.app/Booluw.jpg">
 </head>
 
 <body
   class="bg-white text-black flex items-center justify-center min-h-screen font-[300] !scrollbar !scrollbar-track-transparent !scrollbar-thumb-primary">
-  <section class="body bg-white text-black flex flex-col items-start md:flex-row p-5 md:w-[1160px] gap-5 rounded" data-scroll-container>
+  <section class="body bg-white text-black flex flex-col items-start md:flex-row p-5 md:w-[1160px] gap-5 rounded"
+    data-scroll-container>
     <aside class="w-full md:w-1/4 md:order-1 flex flex-col gap-5 md:sticky md:top-2">
       <div class="p-5 border border-border rounded" data-animate>
         <h2 class="font-[500] text-black text-sm">Navigation</h2>
@@ -121,28 +136,19 @@
     </aside>
     <main class="md:w-3/4">
       <header
-        class="text-xl md:text-4xl py-5 font-[200] border-b border-border sticky top-0 bg-white z-10 flex items-center justify-between"
-      >
+        class="text-xl md:text-4xl py-5 font-[200] border-b border-border sticky top-0 bg-white z-10 flex items-center justify-between">
         <h1 class="cursor-default select-none" data-easter="dbl" title="Double Click to see inside" data-animate>
           Boluwatife Johnson
         </h1>
         <div class="flex gap-2">
-          <div
-            class="p-2 rounded-full bg-[#0076B6] cursor-pointer scale-90 transition-transform ease-in-out"
-            data-theme="primary"
-          ></div>
-          <div
-            class="p-2 rounded-full bg-[#65532F] cursor-pointer scale-90 transition-transform ease-in-out"
-            data-theme="reading"
-          ></div>
-          <div
-            class="p-2 rounded-full bg-[#F58549] cursor-pointer scale-90 transition-transform ease-in-out"
-            data-theme="space"
-          ></div>
-          <div
-            class="p-2 rounded-full bg-[#AAAABE] cursor-pointer scale-90 transition-transform ease-in-out"
-            data-theme="dark"
-          ></div>
+          <div class="p-2 rounded-full bg-[#0076B6] cursor-pointer scale-90 transition-transform ease-in-out"
+            data-theme="primary"></div>
+          <div class="p-2 rounded-full bg-[#65532F] cursor-pointer scale-90 transition-transform ease-in-out"
+            data-theme="reading"></div>
+          <div class="p-2 rounded-full bg-[#F58549] cursor-pointer scale-90 transition-transform ease-in-out"
+            data-theme="space"></div>
+          <div class="p-2 rounded-full bg-[#AAAABE] cursor-pointer scale-90 transition-transform ease-in-out"
+            data-theme="dark"></div>
         </div>
       </header>
 
@@ -175,13 +181,10 @@
         <div
           class="w-full flex flex-col md:flex-row overflow-y-hidden overflow-x-auto gap-5 py-5 md:pr-14 !scrollbar !scrollbar-track-border/[.02] !scrollbar-thumb-border">
           <div
-            class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col items-start justify-between"
-          >
+            class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col items-start justify-between">
             <div data-animate>
-              <img
-                src="./public/orunla-page-screenshot.png"
-                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out"
-              />
+              <img src="/orunla-page-screenshot.webp"
+                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
               <div class="mt-3">
                 <h3 class="font-[500]">Orunla</h3>
                 <p class="text-sm mt-1 mb-2 md:line-clamp-3">
@@ -190,12 +193,9 @@
                 </p>
               </div>
             </div>
-            <a
-              href="//orunla.ng"
-              target="_blank"
+            <a href="//orunla.ng" target="_blank"
               class="inline-flex py-1 px-2 border border-border rounded-sm text-primary group-hover:bg-primary group-hover:text-white group-hover:border-primary text-sm font-[400]"
-              data-animate
-            >
+              data-animate>
               orunla.ng
             </a>
           </div>
@@ -203,7 +203,7 @@
           <div
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col items-start justify-between">
             <div data-animate>
-              <img src="./public/fufumaps-page-screenshot.png"
+              <img src="/fufumaps-page-screenshot.webp"
                 class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
               <div class="mt-3">
                 <h3 class="font-[500]">Fufumaps</h3>
@@ -213,12 +213,9 @@
                 </p>
               </div>
             </div>
-            <a
-              href="//fufumaps.com"
-              target="_blank"
+            <a href="//fufumaps.com" target="_blank"
               class="inline-flex py-1 px-2 border border-border rounded-sm text-primary group-hover:bg-primary group-hover:text-white group-hover:border-primary text-sm font-[400]"
-              data-animate
-            >
+              data-animate>
               fufumaps.com
             </a>
           </div>
@@ -226,7 +223,7 @@
           <div
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
             <div data-animate>
-              <img src="./public/photosplash-page-screenshot.png"
+              <img src="/photosplash-page-screenshot.webp"
                 class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
               <div class="mt-3">
                 <h3 class="font-[500]">Photosplash</h3>
@@ -235,12 +232,9 @@
                 </p>
               </div>
             </div>
-            <a
-              href="//ps6555753.web.app"
-              target="_blank"
+            <a href="//ps6555753.web.app" target="_blank"
               class="inline-flex py-1 px-2 border border-border rounded-sm text-primary group-hover:bg-primary group-hover:text-white group-hover:border-primary text-sm font-[400]"
-              data-animate
-            >
+              data-animate>
               ps6555753.web.app
             </a>
           </div>
@@ -248,7 +242,7 @@
           <div
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
             <div data-animate>
-              <img src="./public/spottang-page-screenshot.png"
+              <img src="/spottang-page-screenshot.webp"
                 class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
               <div class="mt-3">
                 <h3 class="font-[500]">Spotta NG</h3>
@@ -257,12 +251,9 @@
                 </p>
               </div>
             </div>
-            <a
-              href="//spotta-ng.netlify.app"
-              target="_blank"
+            <a href="//spotta-ng.netlify.app" target="_blank"
               class="inline-flex py-1 px-2 border border-border rounded-sm text-primary group-hover:bg-primary group-hover:text-white group-hover:border-primary text-sm font-[400]"
-              data-animate
-            >
+              data-animate>
               spotta-ng.netlify.app
             </a>
           </div>
@@ -666,7 +657,7 @@
       class=&quot;flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col
       items-start justify-between&quot;&gt;
       &lt;div&gt;
-      &lt;img src=&quot;./public/orunla-page-screenshot.png&quot;
+      &lt;img src=&quot;/orunla-page-screenshot.webp&quot;
       class=&quot;w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out&quot; /&gt;
       &lt;div class=&quot;mt-3&quot;&gt;
       &lt;h3 class=&quot;font-[500]&quot;&gt;Orunla&lt;/h3&gt;
@@ -687,7 +678,7 @@
       class=&quot;flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col
       items-start justify-between&quot;&gt;
       &lt;div&gt;
-      &lt;img src=&quot;./public/fufumaps-page-screenshot.png&quot;
+      &lt;img src=&quot;/fufumaps-page-screenshot.webp&quot;
       class=&quot;w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out&quot; /&gt;
       &lt;div class=&quot;mt-3&quot;&gt;
       &lt;h3 class=&quot;font-[500]&quot;&gt;Fufumaps&lt;/h3&gt;
@@ -709,7 +700,7 @@
       class=&quot;flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col
       items-start justify-between&quot;&gt;
       &lt;div&gt;
-      &lt;img src=&quot;./public/photosplash-page-screenshot.png&quot;
+      &lt;img src=&quot;/photosplash-page-screenshot.webp&quot;
       class=&quot;w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out&quot; /&gt;
       &lt;div class=&quot;mt-3&quot;&gt;
       &lt;h3 class=&quot;font-[500]&quot;&gt;Photosplash&lt;/h3&gt;
@@ -729,7 +720,7 @@
       class=&quot;flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col
       items-start justify-between&quot;&gt;
       &lt;div&gt;
-      &lt;img src=&quot;./public/spottang-page-screenshot.png&quot;
+      &lt;img src=&quot;/spottang-page-screenshot.webp&quot;
       class=&quot;w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out&quot; /&gt;
       &lt;div class=&quot;mt-3&quot;&gt;
       &lt;h3 class=&quot;font-[500]&quot;&gt;Spotta NG&lt;/h3&gt;
