--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     gtag('config', 'G-H7N8P01YS7');
   </script>
 
+  <meta name="msvalidate.01" content="BF9CE271743771A1ACCB19EB651D089C" />
+
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
