--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./style.css" />
-  <title>About Boluwatife Johnson | Frontend developer, and Technical speaker</title>
-  <meta name="description"
-    content="Building products, pushing the browser to the limit and learning exciting technologies are 3 terms that describe my journey into tech. As a Computer Science graduate, I thrive to make softwares that are built for the web, user enjoyable and scalable to extend how humans use computers. I believe there's no limit to how the browser can go, we haven't just pushed it there yet. Aside coding, I also love to build businesses as I am doing on the side with orunla.ng." />
+  <title>About Boluwatife Johnson | Frontend developer, and Technical speaker</title>  
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="About Boluwatife Johnson | Frontend developer, and Technical speaker">
-  <meta property="og:description"
-    content="Building products, pushing the browser to the limit and learning exciting technologies are 3 terms that describe my journey into tech. As a Computer Science graduate, I thrive to make softwares that are built for the web, user enjoyable and scalable to extend how humans use computers.">
   <meta property="og:image" content="https://booluw.vercel.app/Booluw.jpg">
   <meta property="og:url" content="https://booluw.vercel.app">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="About Boluwatife Johnson | Frontend developer, and Technical speaker">
-  <meta name="twitter:description"
-    content="Building products, pushing the browser to the limit and learning exciting technologies are 3 terms that describe my journey into tech. As a Computer Science graduate, I thrive to make softwares that are built for the web, user enjoyable and scalable to extend how humans use computers.">
   <meta name="twitter:image" content="https://booluw.vercel.app/Booluw.jpg">
+  <meta name="description"
+    content="Booluw is a frontend developer and technical speaker with 5 years experience." />
+  <meta property="og:description"
+    content="Booluw is a frontend developer and technical speaker with 5 years experience.">
+  <meta name="twitter:description"
+    content="Booluw is a frontend developer and technical speaker with 5 years experience.">
 </head>
 
 <body
@@ -152,6 +152,7 @@
         <div class="flex items-center gap-3">
           <img
             src="/Booluw.jpg"
+            alt="Thumbnail of a picture of Boluwatife Johnson"
             class="rounded-sm border border-primary p-[2px] grayscale cursor-pointer select-none hover:grayscale-0 transition-all ease-in-out rotate-12"
             width="36px"
             data-easter="dbl" title="Double Click to see inside"
@@ -205,6 +206,7 @@
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col items-start justify-between">
             <div data-animate>
               <img src="/orunla-page-screenshot.webp"
+                alt="Thumbnail of Orunla Africa landing page"
                 class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
               <div class="mt-3">
                 <h3 class="font-[500]">Orunla</h3>
@@ -225,6 +227,7 @@
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col items-start justify-between">
             <div data-animate>
               <img src="/fufumaps-page-screenshot.webp"
+                alt="Thumbnail of Fufumaps landing page"
                 class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
               <div class="mt-3">
                 <h3 class="font-[500]">Fufumaps</h3>
@@ -245,6 +248,7 @@
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
             <div data-animate>
               <img src="/photosplash-page-screenshot.webp"
+                alt="Thumbnail of Photosplash: Add text overlays to your images"
                 class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
               <div class="mt-3">
                 <h3 class="font-[500]">Photosplash</h3>
@@ -264,6 +268,7 @@
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
             <div data-animate>
               <img src="/spottang-page-screenshot.webp"
+                alt="Thumbnail of SpottaNG home page"
                 class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
               <div class="mt-3">
                 <h3 class="font-[500]">Spotta NG</h3>
@@ -524,7 +529,7 @@
 
   <div class="fixed top-0 right-0 left-0 -z-[5] flex items-center justify-center">
     <section class="p-5 md:w-[1160px] text-justify" data-nosnippet>
-      <h1 class="text-2xl font-[400] mb-3 text-black ">You've found the source code easter egg</h1>
+      <h2 class="text-2xl font-[400] mb-3 text-black ">You've found the source code easter egg</h2>
       &lt;section class=&quot;flex flex-col items-start md:flex-row p-5 md:px-0 md:w-[1200px] gap-5&quot;&gt;
       &lt;aside class=&quot;w-full md:w-1/4 md:order-1 p-5 border border-border rounded md:sticky md:top-2&quot;&gt;
       &lt;h2 class=&quot;font-[500] text-black text-sm&quot;&gt;Navigation&lt;/h2&gt;
