feat: updated SpottaNG domain

--- a/index.html
+++ b/index.html
@@ -460,10 +460,10 @@
                 </p>
               </div>
             </div>
-            <a href="//spotta-ng.netlify.app" target="_blank"
+            <a href="//spotta.ng" target="_blank"
               class="inline-flex py-1 px-2 border border-border rounded-sm text-primary group-hover:bg-primary group-hover:text-white group-hover:border-primary text-sm font-[400]"
               data-animate>
-              spotta-ng.netlify.app
+              spotta.ng
             </a>
           </div>
         </div>
