feat: added new project, and updated some links

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <a href="#education" class="w-full" data-internal-link>Education</a>
           </li>
         </ul>
-        <div class="mt-5 flex items-center gap-10 md:gap-5">
+        <div class="my-5 flex items-center justify-between">
           <a href="//github.com/booluw" target="_blank" class="inline text-black hover:text-primary">
             <svg fill="currentColor" class="w-[24px]" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
               <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -83,7 +83,21 @@
             </svg>
           </a>
 
-          <a href="//github.com/booluw" target="_blank" class="inline text-black hover:text-primary">
+          <a href="//stackoverflow.com/users/5454933/booluw" target="_blank"
+            class="inline text-black hover:text-primary">
+            <svg fill="currentColor" class="w-[28px]" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+              <g id="SVGRepo_iconCarrier">
+                <rect width="24" height="24" fill="none"></rect>
+                <path
+                  d="M17.36,20.2V14.82h1.79V22H3V14.82H4.8V20.2H17.36M6.77,14.32l.37-1.76,8.79,1.85-.37,1.76L6.77,14.32m1.16-4.21L8.69,8.5l8.14,3.78-.76,1.62L7.93,10.11m2.26-4,1.15-1.38,6.9,5.76-1.15,1.37-6.9-5.75m4.45-4.25L20,9.08l-1.44,1.07L13.2,2.94l1.44-1.07m-8,16.54v-1.8h9v1.8Z">
+                </path>
+              </g>
+            </svg>
+          </a>
+
+          <a href="//linkedin.com/in/booluw" target="_blank" class="inline text-black hover:text-primary">
             <svg fill="currentColor" class="w-[24px]" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
               <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
               <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -116,31 +130,34 @@
             </svg>
           </a>
 
-          <a href="https://docs.google.com/document/d/1QwcjFuw6chztKCYIqZjjGfrNDJVNcfEsEfi9V0eySUM/edit?usp=sharing"
-            target="_blank"
-            class="flex gap-2 bg-primary text-white hover:bg-black text-sm py-2 px-5 md:px-3 rounded-sm font-[500] transition-colors ease-in-out">
-            <svg fill="currentColor" class="w-[20px]" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
-              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-              <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-              <g id="SVGRepo_iconCarrier">
-                <path
-                  d="M23.004 1.5q.41 0 .703.293t.293.703v19.008q0 .41-.293.703t-.703.293H6.996q-.41 0-.703-.293T6 21.504V18H.996q-.41 0-.703-.293T0 17.004V6.996q0-.41.293-.703T.996 6H6V2.496q0-.41.293-.703t.703-.293zM6.035 11.203l1.442 4.735h1.64l1.57-7.876H9.036l-.937 4.653-1.325-4.5H5.38l-1.406 4.523-.938-4.675H1.312l1.57 7.874h1.641zM22.5 21v-3h-15v3zm0-4.5v-3.75H12v3.75zm0-5.25V7.5H12v3.75zm0-5.25V3h-15v3Z">
-                </path>
-              </g>
-            </svg>
-            Resume
-          </a>
+
         </div>
+
+        <a href="https://docs.google.com/document/d/e/2PACX-1vQ-PKq-NQYZzzFd8mv1C1EDqEvGV4d7yQBUQOGWC832sliPv03dcOSoQ9JAo91Y0PdQYX7RCG0wS_0C/pub"
+          title="Boluwatife Johnson's Resume" target="_blank"
+          class="flex items-center gap-2 bg-primary text-white hover:bg-black p-3 rounded-sm font-[500] transition-colors ease-in-out">
+          <svg fill="currentColor" class="w-[24px]" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+              <path
+                d="M23.004 1.5q.41 0 .703.293t.293.703v19.008q0 .41-.293.703t-.703.293H6.996q-.41 0-.703-.293T6 21.504V18H.996q-.41 0-.703-.293T0 17.004V6.996q0-.41.293-.703T.996 6H6V2.496q0-.41.293-.703t.703-.293zM6.035 11.203l1.442 4.735h1.64l1.57-7.876H9.036l-.937 4.653-1.325-4.5H5.38l-1.406 4.523-.938-4.675H1.312l1.57 7.874h1.641zM22.5 21v-3h-15v3zm0-4.5v-3.75H12v3.75zm0-5.25V7.5H12v3.75zm0-5.25V3h-15v3Z">
+              </path>
+            </g>
+          </svg>
+          My Resume
+        </a>
       </div>
       <div class="p-5 border border-border rounded bg-border" data-animate>
         <h2 class="font-[500] text-black text-sm">Newsletter</h2>
-        <p class="text-sm leading-snug my-3">
-          I write weekly on my newsletter; <span class="font-[400]">Frontend Uncensored</span>, where I share my latest
-          findings and how we can push the browser together to new limits.
+        <p class="text-sm leading-snug mt-3 mb-4">
+          <span class="opacity-90">I write weekly on my newsletter;</span> <span class="font-[400]">Frontend
+            Uncensored</span><span class="opacity-90">, where I share my latest
+            findings and how we can push the browser together to new limits.</span>
         </p>
 
         <a href="//booluw.substack.com" target="_blank"
-          class="inline-flex items-center gap-2 py-2 px-4 rounded-sm text-sm text-primary border border-primary hover:text-white hover:bg-primary">
+          class="flex items-center gap-2 py-2 px-4 rounded-sm text-xs text-primary border border-primary hover:text-white hover:bg-primary font-[500]">
           <svg class="w-[24px]" viewBox="0 0 48 48" id="a" xmlns="http://www.w3.org/2000/svg" fill="#000000">
             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -389,6 +406,47 @@
         <div
           class="w-full flex flex-col md:flex-row overflow-y-hidden overflow-x-auto gap-5 py-5 md:pr-14 !scrollbar !scrollbar-track-border/[.02] !scrollbar-thumb-border">
           <div
+            class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
+            <div data-animate>
+              <img src="/spottang-page-screenshot.webp" alt="Thumbnail of SpottaNG home page"
+                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
+              <div class="mt-3">
+                <h3 class="font-[500]">Spotta NG</h3>
+                <p class="text-sm mt-1 mb-2 md:line-clamp-3">
+                  See through the lenses of people who have lived or visited the neighbourhood you might have in mind.
+                </p>
+              </div>
+            </div>
+            <a href="//spotta.ng" target="_blank"
+              class="inline-flex py-1 px-2 border border-border rounded-sm text-primary group-hover:bg-primary group-hover:text-white group-hover:border-primary text-sm font-[400]"
+              data-animate>
+              spotta.ng
+            </a>
+          </div>
+
+          <div
+            class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
+            <div data-animate>
+              <img src="/levelhire-page-screenshot.webp" alt="Thumbnail of SpottaNG home page"
+                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
+              <div class="mt-3">
+                <h3 class="font-[500] inline-block mr-3">LevelHire App</h3>
+                <span class="text-xs bg-orange-50 text-orange-500 font-semibold py-[2px] px-2 rounded">Auth
+                  Required</span>
+                <p class="text-sm mt-1 mb-2 md:line-clamp-3">
+                  Connect with Experienced Mentors Today!.
+                  Schedule and attend video sessions with mentors.
+                </p>
+              </div>
+            </div>
+            <a href="//app.level-hire.com" target="_blank"
+              class="inline-flex py-1 px-2 border border-border rounded-sm text-primary group-hover:bg-primary group-hover:text-white group-hover:border-primary text-sm font-[400]"
+              rel="nofollow" data-animate>
+              app.level-hire.com
+            </a>
+          </div>
+
+          <div
             class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default flex flex-col items-start justify-between">
             <div data-animate>
               <img src="/orunla-page-screenshot.webp" alt="Thumbnail of Orunla Africa landing page"
@@ -445,25 +503,6 @@
               class="inline-flex py-1 px-2 border border-border rounded-sm text-primary group-hover:bg-primary group-hover:text-white group-hover:border-primary text-sm font-[400]"
               data-animate>
               ps6555753.web.app
-            </a>
-          </div>
-
-          <div
-            class="flex-shrink-0 w-full md:w-[250px] border border-border p-3 rounded group cursor-default  flex flex-col items-start justify-between">
-            <div data-animate>
-              <img src="/spottang-page-screenshot.webp" alt="Thumbnail of SpottaNG home page"
-                class="w-full h-auto rounded-sm grayscale group-hover:grayscale-0 transition-all ease-in-out" />
-              <div class="mt-3">
-                <h3 class="font-[500]">Spotta NG</h3>
-                <p class="text-sm mt-1 mb-2 md:line-clamp-3">
-                  See through the lenses of people who have lived or visited the neighbourhood you might have in mind.
-                </p>
-              </div>
-            </div>
-            <a href="//spotta.ng" target="_blank"
-              class="inline-flex py-1 px-2 border border-border rounded-sm text-primary group-hover:bg-primary group-hover:text-white group-hover:border-primary text-sm font-[400]"
-              data-animate>
-              spotta.ng
             </a>
           </div>
         </div>
@@ -533,6 +572,55 @@
 
           <div class="border-b border-border py-2">
             <div>
+              <h3 class="font-[500]">Paywell Solutions</h3>
+              <div class="text-sm flex gap-3">
+                <h4 class="border-r border-border pr-3">
+                  Frontend Developer
+                </h4>
+                <h4 class="">Contract</h4>
+              </div>
+              <h4 class="text-sm opacity-85">
+                September, 2023 - September, 2024
+              </h4>
+            </div>
+            <p class="my-3 text-sm md:w-2/3 opacity-75">
+              Designed and Developed the client dashboard for the GACL console.
+            </p>
+            <div class="flex flex-wrap gap-2">
+              <div
+                class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
+                <svg class="w-[14px]" fill="currentColor" viewBox="0 0 24 24" role="img"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <path
+                      d="M24,1.61H14.06L12,5.16,9.94,1.61H0L12,22.39ZM12,14.08,5.16,2.23H9.59L12,6.41l2.41-4.18h4.43Z">
+                    </path>
+                  </g>
+                </svg>
+                Vue
+              </div>
+
+              <div
+                class="bg-transparent text-black hover:bg-primary hover:text-white flex gap-3 items-center py-1 px-2 border border-border rounded-sm transition-colors ease-in-out">
+                <svg fill="currentColor" class="w-[16px]" viewBox="0 0 24 24" role="img"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <path
+                      d="M0 12v12h24V0H0zm19.341-.956c.61.152 1.074.423 1.501.865.221.236.549.666.575.77.008.03-1.036.73-1.668 1.123-.023.015-.115-.084-.217-.236-.31-.45-.633-.644-1.128-.678-.728-.05-1.196.331-1.192.967a.88.88 0 0 0 .102.45c.16.331.458.53 1.39.933 1.719.74 2.454 1.227 2.911 1.92.51.773.625 2.008.278 2.926-.38.998-1.325 1.676-2.655 1.9-.411.073-1.386.062-1.828-.018-.964-.172-1.878-.648-2.442-1.273-.221-.243-.652-.88-.625-.925.011-.016.11-.077.22-.141.108-.061.511-.294.892-.515l.69-.4.145.214c.202.308.643.731.91.872.766.404 1.817.347 2.335-.118a.883.883 0 0 0 .313-.72c0-.278-.035-.4-.18-.61-.186-.266-.567-.49-1.649-.96-1.238-.533-1.771-.864-2.259-1.39a3.165 3.165 0 0 1-.659-1.2c-.091-.339-.114-1.189-.042-1.531.255-1.197 1.158-2.03 2.461-2.278.423-.08 1.406-.05 1.821.053zm-5.634 1.002l.008.983H10.59v8.876H8.38v-8.876H5.258v-.964c0-.534.011-.98.026-.99.012-.016 1.913-.024 4.217-.02l4.195.012z">
+                    </path>
+                  </g>
+                </svg>
+                Typescript
+              </div>
+            </div>
+          </div>
+
+          <div class="border-b border-border py-2">
+            <div>
               <h3 class="font-[500]">Orunla Africa</h3>
               <div class="text-sm flex gap-3">
                 <h4 class="border-r border-border pr-3">
@@ -541,7 +629,7 @@
                 <h4 class="">Contract</h4>
               </div>
               <h4 class="text-sm opacity-85">
-                August, 2023 - Present
+                August, 2023 - May, 2024
               </h4>
             </div>
             <p class="my-3 text-sm md:w-2/3 opacity-75">
@@ -731,8 +819,8 @@
               </div>
             </div>
             <p class="my-3 text-sm md:w-2/3 font-[400]">
-              <span class="font-[300] opacity-75">
-                Graduated magna cum laude, having mentored over 5 colleagues in web development, being the
+              Graduated magna cum laude<span class="font-[300] opacity-75">, having mentored over 5 colleagues in web
+                development, being the
               </span> president of my department
               <span class="font-[300] opacity-75">student association and awarded the</span>
               VC award for Excellence
@@ -763,7 +851,7 @@
       </div>
 
       <footer class="mt-10 text-center opacity-75 cursor-pointer" data-easter="clk" title="Double Click to see inside">
-        Made with 💗 and 💡 <br /> <span class="font-[400]">&copy; Booluw, 2024</span>
+        Made with 💗 and 💡 <br /> <span class="font-[400]">&copy; Booluw, <span data-insert="year"></span></span>
       </footer>
     </main>
   </section>
